engine/codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__realtime_requests__overridden_voice_save.snap
---
source: tui/src/app/tests/realtime_requests.rs
assertion_line: 1679
expression: message
---
■ Voice preference was saved but not applied: Overridden by session flags
