engine/codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__realtime_requests__remote_voice_picker_server_default.snap
---
source: tui/src/app/tests/realtime_requests.rs
expression: popup
---
  Select voice
  Applies to your next voice conversation.


› 1. maple (current)
  2. cove
  3. juniper
  4. Back

  enter select · esc back
